packages/prop-house-webapp/src/quill.css
.ql-container {
  border: none;
  font-size: 16px !important;
  color: var(--brand-black);
  margin-bottom: 1.75rem;
  white-space: pre-line;
  border-bottom-left-radius: 12px;
  border-bottom-right-radius: 12px;
  border: 1px rgba(0, 0, 0, 0.1) solid;
  padding: 1rem 0.75rem;
  margin-bottom: 0rem;
  min-height: 20em !important;
  background: white;
}

.ql-toolbar {
  background: white;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  border-bottom: none;
  padding: 0.5rem !important;
  position: sticky;
  top: 0;
  z-index: 9;
}
.ql-editor {
  font-size: 16px !important;
  padding: 0 !important;
  min-height: 20em !important;
}
.ql-editor.ql-blank::before {
  left: auto !important;
  right: auto !important;
  color: var(--brand-gray-transparent) !important;
  font-size: 16px !important;
  font-style: italic !important;
}
.ql-editor a {
  text-decoration: underline !important;
  color: var(--brand-gray) !important;
}
.ql-editor a:hover {
  color: var(--brand-gray-semi-transparent) !important;
  cursor: pointer !important;
  transition: all 0.1s ease-in-out !important;
}
.ql-editor strong {
  font-weight: 600 !important;
}

.hideBorderBox {
  background: #f5f5f5;
  top: 0;
  position: sticky !important;
  z-index: 1;
  height: 10px;
}
.editPropContainer .hideBorderBox {
  background: white;
}

.quill {
  margin-top: -20px;
}
pre {
  background: #2f3136 !important;
  padding: 22px !important;
  color: white;
}
.ql-editor pre {
  background: #2f3136 !important;
  color: white !important;
  padding: 22px !important;
  overflow-x: auto;
}

.ReactModal__Overlay--after-open {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  background: rgba(0, 0, 0, 0.12);
  background: rgba(0, 0, 0, 0.18) !important;
  backdrop-filter: blur(10px) !important;
}

blockquote {
  border-left: 4px solid #ccc !important;
  margin-bottom: 5px !important;
  margin-top: 5px !important;
  padding-left: 16px !important;
}

.ql-tooltip {
  background: var(--bg-light);
  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.12), var(--shadow-low);
  border-radius: 8px;
  color: black;
  font-size: 14px;
  font-weight: 700;
}
.ql-action,
.ql-preview,
.ql-remove {
  font-weight: 500;
}
.ql-preview {
  color: black !important;
  text-decoration: underline !important;
  color: var(--brand-pink) !important;
}
.ql-preview:hover {
  font-weight: 700;
}
.ql-action:hover,
.ql-remove:hover {
  font-weight: 600 !important;
}

